fixed overflow issue

--- a/blocks/columns/columns.css
+++ b/blocks/columns/columns.css
@@ -265,6 +265,16 @@
   height: 200px;
 }
 
+.columns.with-box-shadow > div > div{
+  padding: 0 20px;
+  border-right: none;
+  border-bottom: 2px solid var(--overlay-background-color);
+}
+
+.columns.with-box-shadow > div > div:last-child{
+  border: none;
+}
+
 
 @media (min-width: 676px) {
   .columns.carousel > div > div {
@@ -289,6 +299,12 @@
 
   .slide-left {
     transform: translateX(-25%);
+  }
+
+  .columns.with-box-shadow > div > div{
+    border-bottom: none;
+    border-right: 2px solid var(--overlay-background-color);
+    min-height: 350px;
   }
 }
 
@@ -379,14 +395,4 @@
   border-radius: 5px;
   padding: 35px 0;
   color: var(--checkbox-label);
-}
-
-.columns.with-box-shadow > div > div{
-  padding: 0 20px;
-  height: 350px;
-  border-right: 2px solid var(--overlay-background-color);
-}
-
-.columns.with-box-shadow > div > div:last-child{
-  border-right: none;
 }
